# todo-app-with-python

./: README.md  docker-compose.yaml  init_poetry.sh  install_fastapi.sh  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
tests/: test_main.py
